...
import com.example.habittracker.ui.theme.ProgressFill
import com.example.habittracker.ui.theme.SmokyAqua
import com.example.habittracker.ui.theme.StarColor
import com.example.habittracker.ui.theme.Tangerine
import com.example.habittracker.ui.viewModel.HabitViewModel
import kotlinx.coroutines.delay
const val NEW_TASK_DIALOG_TEXT_FIELD = "NEW_TASK_DIALOG_TEXT_FIELD"
@Composable
fun HabitListScreen(
    modifier: Modifier = Modifier,
    viewModel: HabitViewModel,
    openAddDialog: Boolean,
    onDialogConsumed: () -> Unit
...
                                    selectedNewHabitCategory = category
                                    isAddCategoryDialogVisible = false
                                    newCategoryText = ""
                                },
                                enabled = newCategoryText.isNotBlank()
                            ) {
                                Text("Добавить")
                            }
                        }
                    }
                }
            }
        }
...
