...
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import com.example.habittracker.ui.theme.Lime
import com.example.habittracker.ui.theme.SmokyAqua
import com.example.habittracker.ui.theme.Tangerine

const val ADD_TASK_BUTTON = "ADD_TASK_BUTTON"
@Composable
fun EmptyHabitsState(
    modifier: Modifier = Modifier,
    onAddClick: () -> Unit
) {
    Column(
...
